log
Sat Apr 23 22:18:18 UTC 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:3: error: expected ‘;’ before ‘return’
   return NULL;
   ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
38c8363
Sat Apr 23 22:19:02 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
9db88b7
Sat Apr 23 22:53:33 UTC 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
3b65e14
Sun Apr 24 21:42:39 UTC 2022: 
 treemap.c | 61 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 60 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:19: error: invalid initializer
   TreeNode nodo = createTreeNode(key,value);
                   ^~~~~~~~~~~~~~
treemap.c:52:18: error: invalid initializer
   TreeNode aux = tree->root;
                  ^~~~
treemap.c:54:6: error: expected ‘(’ before ‘tree’
   if tree->root == NULL{
      ^~~~
treemap.c:54:10: error: statement with no effect [-Werror=unused-value]
   if tree->root == NULL{
      ~~~~^~~~~~
treemap.c:73:9: error: invalid operands to binary == (have ‘TreeNode {aka struct TreeNode}’ and ‘void *’)
   if(aux==NULL){
         ^~
treemap.c:74:8: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     aux->parent = tree->current->parent;
        ^~
treemap.c:75:32: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     if(tree->lower_than(key,aux->parent->pair->key) == 1){
                                ^~
treemap.c:76:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->parent->left = aux;
          ^~
treemap.c:79:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->parent->right = aux;
          ^~
treemap.c:82:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:51:12: error: unused variable ‘nodo’ [-Werror=unused-variable]
   TreeNode nodo = createTreeNode(key,value);
            ^~~~
treemap.c: In function ‘removeNode’:
treemap.c:105:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘rigth’; did you mean ‘right’?
         node->parent->left = node->rigth;
                                    ^~~~~
                                    right
cc1: all warnings being treated as errors
Compilation failed
3e5838d
Sun Apr 24 23:31:37 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:6: error: expected ‘(’ before ‘tree’
   if tree->root == NULL{
      ^~~~
treemap.c:54:10: error: statement with no effect [-Werror=unused-value]
   if tree->root == NULL{
      ~~~~^~~~~~
treemap.c: In function ‘removeNode’:
treemap.c:107:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘rigth’; did you mean ‘right’?
         node->parent->left = node->rigth;
                                    ^~~~~
                                    right
cc1: all warnings being treated as errors
Compilation failed
44127a6
Sun Apr 24 23:32:38 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:18: error: ‘nodo’ undeclared (first use in this function)
     tree->root = nodo;
                  ^~~~
treemap.c:56:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5448097
Sun Apr 24 23:33:08 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d996282
Mon Apr 25 00:34:29 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c4b8306
Mon Apr 25 00:37:15 UTC 2022: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
40e29a4
Mon Apr 25 00:41:32 UTC 2022: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c:80:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
9fa0d30
Mon Apr 25 00:42:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
611b4bf
Mon Apr 25 00:44:35 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c:80:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
bee0762
Mon Apr 25 00:44:43 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2d03c5
Mon Apr 25 00:49:07 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:78:5: error: ‘ree’ undeclared (first use in this function); did you mean ‘tree’?
     ree->current = aux;
     ^~~
     tree
treemap.c:78:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9e56a54
Mon Apr 25 00:49:15 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18ff472
Mon Apr 25 00:49:54 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
69bec33
Mon Apr 25 00:55:44 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
494cbe3
Mon Apr 25 00:57:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
0b2b21b
Mon Apr 25 01:02:22 UTC 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
07c616e
Mon Apr 25 01:03:10 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b025f0
Mon Apr 25 01:03:59 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
c433ac8
Mon Apr 25 01:04:14 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
6e29164
Mon Apr 25 01:20:02 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:138:11: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(aux->key == key) return aux;
           ^~
treemap.c:138:32: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(aux->key == key) return aux;
                                ^~~
cc1: all warnings being treated as errors
Compilation failed
79b4be4
Mon Apr 25 01:23:32 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:138:44: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_equal(tree,key,aux) == 1) return aux;
                                            ^~~
cc1: all warnings being treated as errors
Compilation failed
2e037bc
Mon Apr 25 01:23:48 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
62a561e
Mon Apr 25 01:24:34 UTC 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
15154a4
